# atri_bot

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Plugin.md  README.md  Readme.md  build.rs  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yaml  pr.yml  release.yml
atri_doc/: package.json
atri_doc/docs/: index.md
atri_doc/docs/.vitepress/: config.js  config.ts
atri_doc/docs/other/: abi.md
atri_doc/docs/primary/: configure.md  run.md
atri_ffi/: Cargo.toml  README.md
atri_ffi/src/: closure.rs  contact.rs  error.rs  ffi.rs  future.rs  lib.rs  message.rs  plugin.rs
atri_ffi/src/message/: meta.rs  mod.rs
atri_macros/: Cargo.toml  README.md
atri_macros/src/: lib.rs
atri_plugin/: Cargo.toml  README.md  build.rs
atri_plugin/src/: bot.rs  error.rs  event.rs  future.rs  lib.rs  listener.rs  log.rs  manager.rs  message.rs
atri_plugin/src/contact/: friend.rs  group.rs  member.rs  mod.rs
atri_plugin/src/loader/: mod.rs
atri_plugin/src/loader/ffi/: event.rs  future.rs
atri_plugin/src/message/: at.rs  ffi.rs  image.rs  meta.rs  mod.rs  reply.rs
atri_plugin/src/plugin/: mod.rs
atri_plugin/src/plugin/ffi/: event.rs  mod.rs
atri_plugin/src/runtime/: manager.rs  mod.rs
default_config/: default_login_conf.toml  log.toml  plugin.toml
docs/.vitepress/: config.js
other/: protocol_version.rs
resources/: welcome.txt
src/: error.rs  lib.rs  macros.rs  main.rs
src/bot/: info.rs  mod.rs  token.rs
src/channel/: mod.rs
src/client/: info.rs  mod.rs
src/config/: log.rs  login.rs  mod.rs  plugin.rs  service.rs
src/contact/: friend.rs  group.rs  member.rs  mod.rs
src/data/: config.rs  font.rs  group.rs  mod.rs
src/event/: custom.rs  listener.rs  mod.rs
src/fun/: mod.rs
src/fun/drawmeme/: mod.rs  zero.rs
src/fun/game/: mod.rs  num_bomb.rs
src/fun/moli/: data.rs  mod.rs
src/message/: at.rs  face.rs  ffi.rs  forward.rs  image.rs  meta.rs  mod.rs  reply.rs
src/plugin/: error.rs  future.rs  mod.rs
src/plugin/ffi/: bot.rs  channel.rs  client.rs  env.rs  event.rs  friend.rs  group.rs  listener.rs  log.rs  member.rs  message.rs  mod.rs  rt.rs  string.rs
src/service/: command.rs  listener.rs  listeners.rs  log.rs  login.rs  mod.rs  plugin.rs  plugin_manager.rs
src/service/command/: argument.rs  builtin.rs  mod.rs
src/signal/: mod.rs
src/signal/sys/: linux.rs  macos.rs  mod.rs  unknown.rs  windows.rs
src/terminal/: buffer.rs  mod.rs  table.rs  tabs.rs  unix.rs  windows.rs
src/terminal/sys/: mod.rs  unix.rs  unknown.rs
