[package]
name = "atri_qq"
version = "0.2.0"
edition = "2021"
authors = ["LaoLittle"]
description = "AtriQQ"
readme = "README.md"
keywords = [
    "Atri",
    "plugin",
    "oicq"
]
license = "AGPL-3.0"
homepage = "https://github.com/LaoLittle/atri_qq"
repository = "https://github.com/LaoLittle/atri_qq"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"
toml = "0"
prost = { version = "0.9", default-features = false }

bytes = "1"
tracing = "0"
tracing-subscriber = { version = "0", features = ["fmt", "local-time"] }
async-trait = "0"
time = { version = "0", features = ["macros", "local-offset", "formatting"] }
regex = "1"
dashmap = "5"
libloading = "0"
rand = "0"
crossbeam-deque = "0"

#terminal
crossterm = "0"
libc = "0"

[dependencies.tokio]
version = "1"
features = [
    "rt-multi-thread",
    "sync",
    "mio",
    "io-std",
    "io-util",
    "fs",
    "signal",
]

[dependencies.ricq]
git = "https://github.com/lz1998/ricq.git"

[dependencies.ricq-guild]
git = "https://github.com/lz1998/ricq.git"

[dependencies.atri_ffi]
path = "atri_ffi"

[dependencies.anyhow]
version = "<= 1.0.59"

[profile.release]
lto = true
strip = true
codegen-units = 1