[package]
name = "atri_bot"
version = "0.7.2"
edition = "2021"
authors = ["LaoLittle"]
description = "A simple bot"
readme = "README.md"
keywords = [
    "Atri",
    "plugin",
    "oicq"
]
license = "MPL-2.0"
homepage = "https://github.com/LaoLittle/atri_bot"
repository = "https://github.com/LaoLittle/atri_bot"

[dependencies]
# serilize
serde = "1"
serde_json = "1"
toml = "0"
prost = { version = "0.9", default-features = false }

bytes = "1"
tracing = "0"
tracing-subscriber = { version = "0", features = ["fmt", "local-time"] }
tracing-appender = "0"
async-trait = "0"
time = { version = "0", features = ["macros", "local-offset", "formatting"] }
regex = "1"
dashmap = "5"
libloading = "0"
rand = "0"
futures = "0"

# terminal
tui = "0"
crossterm = "0"
libc = "0"
cfg-if = "1"

[dependencies.tokio]
version = "1"
features = [
    "rt-multi-thread",
    "sync",
    "mio",
    "io-std",
    "io-util",
    "fs",
    "signal",
]

[dependencies.ricq]
git = "https://github.com/AtriKawaii/ricq.git"
version = "0.1.19"

#[dependencies.ricq-guild]
#version = "0.1.0"

[dependencies.atri_ffi]
version = "0.6.1"

[profile.release]
lto = true
strip = true
codegen-units = 1

[build-dependencies]
serde = { version = "1.0.150", features = ["derive"] }
toml = "0.5.9"