[package]
name = "atri_ffi"
version = "0.2.2"
edition = "2021"
authors = ["LaoLittle"]
description = "AtriBot FFI structs"
readme = "README.md"
keywords = [
    "Atri",
    "FFI",
    "oicq"
]
license = "AGPL-3.0"
homepage = "https://github.com/LaoLittle/atri_bot"
repository = "https://github.com/LaoLittle/atri_bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html