[package]
name = "atri_macros"
version = "0.1.0"
edition = "2021"
authors = ["LaoLittle"]
description = "AtriQQ plugin macros"
readme = "README.md"
keywords = [
    "Atri",
    "macro",
    "plugin",
    "oicq"
]
license = "AGPL-3.0"
homepage = "https://github.com/LaoLittle/atri_qq"
repository = "https://github.com/LaoLittle/atri_qq"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["proc-macro"]