[package]
name = "atri_plugin"
version = "0.2.4"
edition = "2021"
authors = ["LaoLittle"]
description = "AtriQQ plugin"
readme = "README.md"
keywords = [
    "Atri",
    "macro",
    "plugin",
    "oicq"
]
license = "AGPL-3.0"
homepage = "https://github.com/LaoLittle/atri_qq"
repository = "https://github.com/LaoLittle/atri_qq"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.atri_ffi]
version = "0.2.1"
path = "../atri_ffi"

[dependencies.atri_macros]
version = "0.1.0"
path = "../atri_macros"